--- a/src/doc/index.less
+++ b/src/doc/index.less
@@ -34,6 +34,7 @@ a.logo:active { background: transparent !important; }
 
 pre {
 background-color: #333 !important; 
+font-size: 14px !important;
 }
 .hljs {
   background: #333;
