fix(doc): fixes menu

--- a/src/doc/index.less
+++ b/src/doc/index.less
@@ -70,3 +70,13 @@ p { font-size: 14px}
 .hljs, .hljs-subst, .hljs-tag .hljs-title, .nginx .hljs-title {
     color: #eee;
 }
+
+.tabs-vertical > li {
+    float: none !important;
+}
+
+.tabs-vertical > li.active > a {
+   border-top-color: transparent !important;
+   border-right-color: transparent !important;
+   border-width: 2px !important;
+}
