--- a/src/doc/index.less
+++ b/src/doc/index.less
@@ -28,7 +28,7 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak { display: none !important; }
 a.logo { padding: 0 !important; }
 a.logo img { max-width: 140px !important; margin-bottom: -36px; }
-a.logo:hover { background: transparent !important; opacity: .5}
+a.logo:hover { background: transparent !important; opacity: .5; border: none}
 a.logo:active { background: transparent !important; }
 
 
@@ -79,4 +79,9 @@ p { font-size: 14px}
    border-top-color: transparent !important;
    border-right-color: transparent !important;
    border-width: 2px !important;
+}
+
+h4 {
+    margin-top: 30px !important;
+    margin-bottom: 5px !important;
 }
