style(): some fixes on appShare component

--- a/client/src/app/modules/home/home.html
+++ b/client/src/app/modules/home/home.html
@@ -19,9 +19,10 @@
                     <a class="button is-danger is-outlined is-medium" href="https://github.com/st1s/angular-morris/releases">Download</a>
                 </div>
             </div>
-            <app-share></app-share>
-            <br />
         </div>
+    </div>
+    <div class="hero-footer">
+        <app-share></app-share><br /><br />
     </div>
 </section>
 <about></about>
