--- a/client/src/app/modules/home/home.html
+++ b/client/src/app/modules/home/home.html
@@ -21,10 +21,8 @@
             </div>
         </div>
     </div>
-    <div class="hero-footer">
-        <app-share></app-share><br /><br />
-    </div>
 </section>
+<social-share></social-share>
 <about></about>
 <about-donut></about-donut>
 <about-bar></about-bar>
