--- a/client/src/app/themes/default/components/appFooter/appFooter.html
+++ b/client/src/app/themes/default/components/appFooter/appFooter.html
@@ -1,3 +1,4 @@
+<social-share section-class="''" url="$ctrl.setting().baseUrl" text="$ctrl.setting().description" media="$ctrl.setting().ogImage"></social-share>
 <footer class="app-footer ng-hide animate-show" ng-show="$ctrl.showFooter">
     <div class="container">
 
@@ -18,14 +19,10 @@
                         <span>Built with</span> <span class="heart"></span> <span>using</span> <a href="https://appfy.org">Appfy</a>
                     </p>
                     <p style="font-size: 85%; margin-top: 7px;">
-                        Created by <a href="https://st1s.io">st1s</a>
+                        brought to you by <a href="https://st1s.io">st1s</a>
                     </p>
                 </div>
             </div>
         </div>
-
-
-
-        <br /><br />
     </div>
 </footer>
