--- a/client/src/app/themes/default/components/tryIt/tryIt.html
+++ b/client/src/app/themes/default/components/tryIt/tryIt.html
@@ -1,14 +1,8 @@
 <div class="try-it">
-    <section class="hero is-info is-bold">
+    <section class="hero is-danger is-medium">
         <div class="hero-body">
             <div class="container has-text-centered">
-
-
                 <a class="button is-warning is-outlined is-large" ui-sref="app.wiki">Try it today</a>
-
-                <br />   <br />
-                <app-share></app-share>
-
             </div>
         </div>
     </section>
