--- a/client/src/app/modules/home/home.html
+++ b/client/src/app/modules/home/home.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 </section>
-<social-share></social-share>
+<social-share section-class="''" url="vm.setting().baseUrl" text="vm.setting().description" media="vm.setting().ogImage"></social-share>
 <about></about>
 <about-donut></about-donut>
 <about-bar></about-bar>
