chore(): add analytics and update CDN

--- a/client/src/app/modules/appfy-wiki/templates/Installing.html
+++ b/client/src/app/modules/appfy-wiki/templates/Installing.html
@@ -11,7 +11,12 @@
 </code></pre><h3 id="download">Download</h3>
 <p><a href="https://raw.githubusercontent.com/st1s/angular-morris-chart/master/src/build/module/angular-morris/angular-morris.min.js">minified from master branch</a></p>
 <p><a href="https://raw.githubusercontent.com/st1s/angular-morris-chart/master/src/build/module/angular-morris/angular-morris.js">full from master branch</a></p>
-<h3 id="cdn-1-2-version">CDN 1.2 version</h3>
+<h3 id="cdn-1-3-new-version-">CDN 1.3 (new version)</h3>
+<p>Minified version:
+<a href="https://cdnjs.cloudflare.com/ajax/libs/angular-morris/1.3.0/angular-morris.min.js">https://cdnjs.cloudflare.com/ajax/libs/angular-morris/1.3.0/angular-morris.min.js</a></p>
+<p>Full version:
+<a href="https://cdnjs.cloudflare.com/ajax/libs/angular-morris/1.3.0/angular-morris.js">https://cdnjs.cloudflare.com/ajax/libs/angular-morris/1.3.0/angular-morris.js</a></p>
+<h3 id="cdn-1-2-old-version-">CDN 1.2 (old version)</h3>
 <p>Minified version:
 <a href="https://cdnjs.cloudflare.com/ajax/libs/angular-morris-chart/1.2.0/angular-morris-chart.min.js">https://cdnjs.cloudflare.com/ajax/libs/angular-morris-chart/1.2.0/angular-morris-chart.min.js</a></p>
 <p>Full version:
@@ -21,7 +26,7 @@
 &lt;script src=&quot;//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js&quot;&gt;&lt;/script&gt;
 &lt;script src=&quot;//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js&quot;&gt;&lt;/script&gt;
 </code></pre><h2 id="add-our-module">Add our module</h2>
-<pre><code>&lt;script src=&quot;//cdnjs.cloudflare.com/ajax/libs/angular-morris-chart/1.2.0/angular-morris-chart.min.js&quot;&gt;&lt;/script&gt;
+<pre><code>&lt;script src=&quot;//cdnjs.cloudflare.com/ajax/libs/angular-morris/1.3.0/angular-morris.min.js&quot;&gt;&lt;/script&gt;
 </code></pre><h2 id="inject-dependency">Inject dependency</h2>
 <p>Make sure you injected <code>angular.morris</code> into your angular project</p>
 <pre><code class="lang-js">angular.module(&#39;my.app&#39;, [
