chore(): movin to ghpages

--- a/client/src/app/modules/appfy-wiki/templates/Installing.html
+++ b/client/src/app/modules/appfy-wiki/templates/Installing.html
@@ -9,8 +9,12 @@
 </code></pre><h3 id="npm">Npm</h3>
 <pre><code>$ npm install angular-morris-chart --save
 </code></pre><h3 id="download">Download</h3>
-<p><a href="https://raw.githubusercontent.com/st1s/angular-morris-chart/master/src/build/module/angular-morris/angular-morris.min.js">minified from master branch</a></p>
-<p><a href="https://raw.githubusercontent.com/st1s/angular-morris-chart/master/src/build/module/angular-morris/angular-morris.js">full from master branch</a></p>
+<ul>
+<li><p><a href="https://raw.githubusercontent.com/st1s/angular-morris/master/src/build/module/angular-morris/angular-morris.min.js">Minified from master branch</a></p>
+</li>
+<li><p><a href="https://raw.githubusercontent.com/st1s/angular-morris/master/src/build/module/angular-morris/angular-morris.js">Full from master branch</a></p>
+</li>
+</ul>
 <h3 id="cdn-1-3-new-version-">CDN 1.3 (new version)</h3>
 <p>Minified version:
 <a href="https://cdnjs.cloudflare.com/ajax/libs/angular-morris/1.3.0/angular-morris.min.js">https://cdnjs.cloudflare.com/ajax/libs/angular-morris/1.3.0/angular-morris.min.js</a></p>
